--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -258,6 +258,234 @@
     "    return new_lst\n",
     "print(common(lst_one,lst_two))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 6\n",
+    "Ask the user for a string and print out whether this string is a palindrome or not. (A palindrome is a string that reads the same forwards and backwards.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'palindrome': True}\n",
+      "malayalam is a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=str(input())\n",
+    "w=\"\"\n",
+    "def palindrome(x,w):\n",
+    "    output={\"palindrome\":False}\n",
+    "    for i in x:\n",
+    "        #this builds the string in the reverse order \n",
+    "        w=i+w\n",
+    "        #print(w)\n",
+    "    if (x==w):\n",
+    "        output={\"palindrome\":True}\n",
+    "    return output\n",
+    "    \n",
+    "palindrome_check=palindrome(x,w)\n",
+    "print(palindrome_check)\n",
+    "if palindrome_check[\"palindrome\"]==True:\n",
+    "    print(f\"{x} is a palindrome\")\n",
+    "else:\n",
+    "    print(f\"{x} is not a palindrome\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 7\n",
+    "Let’s say I give you a list saved in a variable: a = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]. Write one line of Python that takes this list a and makes a new list that has only the even elements of this list in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,4,9,16,25,36,49,64,81,100]\n",
+    "b=[number for number in a if number%2==0]\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,4,9,16,25,36,49,64,81,100]\n",
+    "def function(a):\n",
+    "    lst=[]\n",
+    "    for i in a:\n",
+    "         if (i%2==0):\n",
+    "             lst.append(i)\n",
+    "    return lst\n",
+    "\n",
+    "print(function(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 8\n",
+    "Make a two-player Rock-Paper-Scissors game. (Hint: Ask for player plays (using input), compare them, print out a message of congratulations to the winner, and ask if the players want to start a new game)\n",
+    "Remember the rules:\n",
+    "- Rock beats scissors\n",
+    "- Scissors beats paper\n",
+    "- Paper beats rock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rock wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "player1 = input(\"choose your call\")\n",
+    "player2 = input(\"choose your call\")\n",
+    "def game(player1,player2):\n",
+    "    if player1==player2:\n",
+    "        return (\"Tie\")\n",
+    "    elif player1==\"rock\":\n",
+    "        if player2==\"scissors\":\n",
+    "            return(\"rock wins\")\n",
+    "        else:\n",
+    "            return(\"paper wins\")\n",
+    "    elif player1==\"scissors\":\n",
+    "        if player2==\"paper\":\n",
+    "            return(\"scissors wins\")\n",
+    "        else:\n",
+    "            return(\"rock wins\")\n",
+    "    elif player1==\"paper\":\n",
+    "        if player2==\"rock\":\n",
+    "            return(\"paper wins\")\n",
+    "        else:\n",
+    "            return(\"scissors win\")\n",
+    "    else:\n",
+    "        return(\"choose one in rock,paper and scissors,try again\")\n",
+    "        sys.exit()\n",
+    "print(game(player1,player2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 9\n",
+    "Generate a random number between 1 and 9 (including 1 and 9). Ask the user to guess the number, then tell them whether they guessed too low, too high, or exactly right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to guessing game\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too high try again\n",
+      "too high try again\n",
+      "too high try again\n",
+      "out of chances. the number is 704\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "lower_limit=1\n",
+    "upper_limit=1000\n",
+    "max_chances=10\n",
+    "number=random.randint(lower_limit,upper_limit)\n",
+    "\n",
+    "def get_guess():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            guess=int(input(f\"guess the number between {lower_limit} and {upper_limit}\"))\n",
+    "            if lower_limit<=guess<=upper_limit:\n",
+    "                return guess\n",
+    "            else:\n",
+    "                print(\"choose between the limits\")\n",
+    "        except ValueError:\n",
+    "            print(\"invalid number\")\n",
+    "\n",
+    "def guess_game(guess,number):\n",
+    "    if guess==number:\n",
+    "        return(\"correct\")\n",
+    "    elif guess>number:\n",
+    "        return(\"too high\")\n",
+    "    else:\n",
+    "        return(\"too low\")\n",
+    "\n",
+    "def play_game():\n",
+    "    chances=0\n",
+    "    won=False\n",
+    "\n",
+    "    while chances<max_chances:\n",
+    "        chances+=1\n",
+    "        guess=get_guess()\n",
+    "        result=guess_game(guess,number)\n",
+    "        if result==\"correct\":\n",
+    "            print(f\"congratulations u have guessed the {number} in {chances} attempts\")\n",
+    "            won=True\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"{result} try again\")\n",
+    "    if not won:\n",
+    "        print(f\"out of chances. the number is {number}\")\n",
+    "if __name__==\"__main__\":\n",
+    "    print(\"welcome to guessing game\")\n",
+    "    play_game()\n"
+   ]
   }
  ],
  "metadata": {
