--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +486,69 @@
     "    print(\"welcome to guessing game\")\n",
     "    play_game()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 10 \n",
+    "Ask the user for a number and determine whether the number is prime or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower_limit=1\n",
+    "upper_limit=1000\n",
+    "\n",
+    "def get_number():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num=int(input(f\"choose the number between {lower_limit} and {upper_limit}\"))\n",
+    "            if lower_limit<=num<=upper_limit:\n",
+    "                return num\n",
+    "            else:\n",
+    "                print(\"choose between limits\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid\")\n",
+    "\n",
+    "def find_divi():\n",
+    "    num=get_number()\n",
+    "    divi=[]\n",
+    "    for i in range(lower_limit,upper_limit):\n",
+    "        if num%i==0:\n",
+    "            divi.append(i)\n",
+    "    return divi\n",
+    "\n",
+    "def prime_number():\n",
+    "    divi=find_divi()\n",
+    "    if int(len(divi))<=2:\n",
+    "        return(\"It is prime number\")\n",
+    "    else:\n",
+    "        return(\"Not a prime number\")\n",
+    "    \n",
+    "if __name__==\"__main__\":\n",
+    "    print(prime_number())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
