--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -544,11 +544,167 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Excercise 11\n",
+    "Write a program that asks the user how many Fibonnaci numbers to generate and then generates them. Take this opportunity to think about how you can use functions. Make sure to ask the user to enter the number of numbers in the sequence to generate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"Enter the number of Fibonacci numbers to generate: \"))\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    fib_sequence = [0, 1]\n",
+    "    while len(fib_sequence) < n:\n",
+    "        fib_sequence.append(fib_sequence[-1] + fib_sequence[-2])\n",
+    "    return fib_sequence\n",
+    "print(fibonacci(n))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 12\n",
+    "Write a program (function!) that takes a list and returns a new list that contains all the elements of the first list minus all the duplicates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=list(map(int,input().split()))\n",
+    "#my_set=set(n)\n",
+    "#print(my_set)\n",
+    "\n",
+    "def function(n):\n",
+    "    lst=[]\n",
+    "    for i in range(int(len(n))):\n",
+    "        count=n.count(i)\n",
+    "        if count>1:\n",
+    "            n.remove(i)\n",
+    "            return lst\n",
+    "print(function(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 13\n",
+    "write a password generator in Python. Be creative with how you generate passwords - strong passwords have a mix of lowercase letters, uppercase letters, numbers, and symbols. The passwords should be random, generating a new password every time the user asks for a new password. Include your run-time code in a main method.\n",
+    "\n",
+    "Extra:\n",
+    "\n",
+    "Ask the user how strong they want their password to be. For weak passwords, pick a word or two from a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSbnkonrv*~#834\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "choice=str(input(f\"weak or strong\"))\n",
+    "characters=[\"!\",\"2\",\"#\",\"$\",\"%\",\"^\",\"&\",\"*\",\"~\"]\n",
+    "# weak=8\n",
+    "# strong=16\n",
+    "def choosing(choice):\n",
+    "    if choice==\"weak\":\n",
+    "        return \"weak password\"\n",
+    "    elif choice==\"strong\":\n",
+    "        return \"strong password\"\n",
+    "    else:\n",
+    "        raise Exception (\"pick one from weak and strong\")\n",
+    "    \n",
+    "def upper_case():\n",
+    "    type_password=choosing(choice)\n",
+    "    length=2\n",
+    "    password=str()\n",
+    "    if type_password==\"strong password\":\n",
+    "        password=''.join(random.choices(string.ascii_uppercase,k=length))\n",
+    "        return password\n",
+    "    else:\n",
+    "        return password\n",
+    "    \n",
+    "#print(upper_case())\n",
+    "\n",
+    "def other_letters():\n",
+    "    password=upper_case()\n",
+    "    #print(strong_password)\n",
+    "    if password!=\"\":\n",
+    "        password+=''.join(random.choices(string.ascii_lowercase,k=7))\n",
+    "        return password\n",
+    "    else:\n",
+    "        password+=''.join(random.choices(string.ascii_lowercase,k=9))\n",
+    "        return password\n",
+    "    \n",
+    "#print(other_letters())\n",
+    "\n",
+    "def special_characters():\n",
+    "    characters=[\"!\",\"@\",\"#\",\"$\",\"%\",\"^\",\"&\",\"*\",\"~\"]\n",
+    "    password=other_letters()\n",
+    "    if any(ele.isupper() for ele in password):\n",
+    "        password+=''.join(random.sample(characters,3))\n",
+    "        return password\n",
+    "    else:\n",
+    "        password+=''.join(random.sample(characters,1))\n",
+    "        return password\n",
+    "    \n",
+    "#print(special_characters())\n",
+    "\n",
+    "def password_generator():\n",
+    "    password=special_characters()\n",
+    "    if int(len(password))==12:\n",
+    "        password+=''.join(str(random.randint(0,9)) for i in range(3))\n",
+    "        return password\n",
+    "    else:\n",
+    "        password+=''.join(str(random.randint(0,9)) for i in range(2))\n",
+    "        return password\n",
+    "    \n",
+    "print(password_generator())\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "# def password_generator():\n",
+    "#     while True:\n"
+   ]
   }
  ],
  "metadata": {
