--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -705,6 +705,41 @@
     "# def password_generator():\n",
     "#     while True:\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 14\n",
+    "Use the BeautifulSoup and requests Python packages to print out a list of all the article titles on the New York Times homepage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The New York Times - Breaking News, US News, World News and Videos\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'http://www.nytimes.com/'\n",
+    "r = requests.get(url)\n",
+    "r_html = r.text\n",
+    "#print(r_html)\n",
+    "\n",
+    "soup = BeautifulSoup(r_html)\n",
+    "title=soup.title.string\n",
+    "print(title)"
+   ]
   }
  ],
  "metadata": {
