python practice update

--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -740,6 +740,355 @@
     "title=soup.title.string\n",
     "print(title)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 15\n",
+    "Create a program that will play the “cows and bulls” game with the user. The game works like this:\n",
+    "\n",
+    "Randomly generate a 4-digit number. Ask the user to guess a 4-digit number. For every digit that the user guessed correctly in the correct place, they have a “cow”. For every digit the user guessed correctly in the wrong place is a “bull.” Every time the user makes a guess, tell them how many “cows” and “bulls” they have. Once the user guesses the correct number, the game is over. Keep track of the number of guesses the user makes throughout the game and tell the user at the end.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to game\n",
+      "lost the game.the secret number is 7816\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "number=str(random.randint(0,9999))\n",
+    "\n",
+    "def compare_number(number,user_guess):\n",
+    "    cowbull=[0,0]\n",
+    "    for i in range(len(number)):\n",
+    "        if number[i]==user_guess[i]:\n",
+    "            cowbull[1]+=1\n",
+    "        else:\n",
+    "            cowbull[0]+=1\n",
+    "    return cowbull\n",
+    "    \n",
+    "def playing(number):\n",
+    "    playing=True\n",
+    "    guesses=0\n",
+    "    while playing:\n",
+    "        user_guess=input(\"Give the guess\")\n",
+    "        if user_guess==\"exit\":\n",
+    "            print(f\"lost the game.the secret number is {number}\")\n",
+    "            break\n",
+    "        cowbullcount=compare_number(number,user_guess)\n",
+    "        guesses+1\n",
+    "        print(\"You have \"+ str(cowbullcount[0]) + \" cows, and \" + str(cowbullcount[1]) + \" bulls.\")\n",
+    "\n",
+    "        if cowbullcount[1]==4:\n",
+    "            playing=False\n",
+    "            print(\"u have won the game\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"try again\")\n",
+    "if __name__==\"__main__\":\n",
+    "    print(\"welcome to game\")\n",
+    "    playing(number)\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 16\n",
+    "There are two ways of solving this problem: one version using a simple for loop to search through the elements of a list, and one using the concept of binary search, looking at the elements in the most efficient way possible.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using a simple loop\n",
+    "def find(lst,ele_to_find):\n",
+    "    for element in lst:\n",
+    "        if element==ele_to_find:\n",
+    "            return True\n",
+    "    return False\n",
+    "if __name__==\"__main__\":\n",
+    "    lst=[2,3,4,5,6,7,8,9]\n",
+    "    print(find(lst,4))\n",
+    "    print(find(lst,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binary search\n",
+    "- Let’s take the list a = [1, 3, 5, 30, 42, 43, 500]. It is an “ordered list”, or a list where the elements in the list go from smaller to larger. Let’s say we want to know whether the element 9 is in the list or not. Here is what we do:\n",
+    "\n",
+    "- Look at the middle element in the list - it is ‘30’. * ‘9 < 30’, so let us ignore the elements to the right of ‘30’.\n",
+    "- The new list we are looking at is now [1, 3, 5].\n",
+    "- Look at the middle element in this new list - it is 3.\n",
+    "- ‘9 > 3’, so ignore the elements to the left of 3.\n",
+    "- The new list we are looking at is [5].\n",
+    "- The list has one element and it is not 9.\n",
+    "- 9 is not in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using the binary search\n",
+    "def find(ord_lst,element_to_find):\n",
+    "    start_index=0\n",
+    "    end_index=len(ord_lst)-1\n",
+    "\n",
+    "    while True:\n",
+    "        middle_index=(end_index+start_index)//2\n",
+    "\n",
+    "        if middle_index<start_index or middle_index>end_index or middle_index<0:\n",
+    "            return False\n",
+    "        \n",
+    "        middle_element=ord_lst[middle_index]\n",
+    "        if middle_element==element_to_find:\n",
+    "            return True\n",
+    "        elif middle_element<element_to_find:\n",
+    "            start_index=middle_index+1\n",
+    "        else:\n",
+    "            end_index=middle_index-1\n",
+    "    return False\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    l=[2,4,6,8,9]\n",
+    "    print(find(l,5))\n",
+    "    print(find(l,9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 17\n",
+    "Given two .txt files that have lists of numbers in them, find the numbers that are overlapping. One .txt file has a list of all prime numbers under 1000, and the other .txt file has a list of happy numbers up to 1000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 13, 19, 23, 31, 79, 97, 103, 109, 139, 167, 193, 239, 263, 293, 313, 331, 367, 379, 383, 397, 409, 487, 563, 617, 653, 673, 683, 709, 739, 761, 863, 881, 907, 937]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primelist=[]\n",
+    "with open('prime_numbers.txt') as primesfile:\n",
+    "    line=primesfile.readline()\n",
+    "    while line:\n",
+    "        primelist.append(int(line))\n",
+    "        line=primesfile.readline()\n",
+    "\n",
+    "happieslist=[]\n",
+    "with open('happy_numbers.txt') as happiesfile:\n",
+    "    line=happiesfile.readline()\n",
+    "    while line:\n",
+    "        happieslist.append(int(line))\n",
+    "        line=happiesfile.readline()\n",
+    "\n",
+    "overlap_lst=[]\n",
+    "for elem in primelist:\n",
+    "    if elem in happieslist:\n",
+    "        overlap_lst.append(elem)\n",
+    "print(overlap_lst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 13, 19, 23, 31, 79, 97, 103, 109, 139, 167, 193, 239, 263, 293, 313, 331, 367, 379, 383, 397, 409, 487, 563, 617, 653, 673, 683, 709, 739, 761, 863, 881, 907, 937]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using the function\n",
+    "def filetolist(filename):\n",
+    "    list_to_return=[]\n",
+    "    with open(filename) as f:\n",
+    "        line=f.readline()\n",
+    "        while line:\n",
+    "            list_to_return.append(int(line))\n",
+    "            line=f.readline()\n",
+    "    return list_to_return\n",
+    "primelist=filetolist('prime_numbers.txt')\n",
+    "happieslist=filetolist('happy_numbers.txt')\n",
+    "\n",
+    "overlaplist=[elem for elem in primelist if elem in happieslist]\n",
+    "print(overlaplist)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 18\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ---  ---  --- \n",
+      "|    |    |    |    \n",
+      " ---  ---  --- \n",
+      "|    |    |    |    \n",
+      " ---  ---  --- \n",
+      "|    |    |    |    \n",
+      " ---  ---  --- \n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_horiz_line():\n",
+    "    print(\" --- \" * board_size)\n",
+    "\n",
+    "def print_vert_line():\n",
+    "    print(\"|    \" * (board_size + 1))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    board_size = int(input(\"What size of game board? \"))\n",
+    "\n",
+    "for index in range(board_size):\n",
+    "    print_horiz_line()\n",
+    "    print_vert_line()\n",
+    "print_horiz_line()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 19\n",
+    "This time, we’re going to do exactly the opposite. You, the user, will have in your head a number between 0 and 100. The program will guess a number, and you, the user, will say whether it is too high, too low, or your number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to guessing game\n",
+      "too high try again\n",
+      "too low try again\n",
+      "too low try again\n",
+      "too high try again\n",
+      "too high try again\n",
+      "too high try again\n",
+      "too low try again\n",
+      "too high try again\n",
+      "too high try again\n",
+      "too low try again\n",
+      "out of chances. the number is 345\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "lower_limit=1\n",
+    "upper_limit=1000\n",
+    "max_chances=10\n",
+    "number=int(input('the number in my head is :'))\n",
+    "\n",
+    "def get_guess():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            guess=random.randint(lower_limit,upper_limit)\n",
+    "            if lower_limit<=guess<=upper_limit:\n",
+    "                return guess\n",
+    "            else:\n",
+    "                print(\"choose between the limits\")\n",
+    "        except ValueError:\n",
+    "            print(\"invalid number\")\n",
+    "\n",
+    "def guess_game(guess,number):\n",
+    "    if guess==number:\n",
+    "        return(\"correct\")\n",
+    "    elif guess>number:\n",
+    "        return(\"too high\")\n",
+    "    else:\n",
+    "        return(\"too low\")\n",
+    "\n",
+    "def play_game():\n",
+    "    chances=0\n",
+    "    won=False\n",
+    "\n",
+    "    while chances<max_chances:\n",
+    "        chances+=1\n",
+    "        guess=get_guess()\n",
+    "        result=guess_game(guess,number)\n",
+    "        if result==\"correct\":\n",
+    "            print(f\"the computer have guessed the {number} in {chances} attempts\")\n",
+    "            won=True\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"{result} try again\")\n",
+    "    if not won:\n",
+    "        print(f\"out of chances. the number is {number}\")\n",
+    "if __name__==\"__main__\":\n",
+    "    print(\"welcome to guessing game\")\n",
+    "    play_game()\n"
+   ]
   }
  ],
  "metadata": {
