--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -1089,6 +1089,197 @@
     "    print(\"welcome to guessing game\")\n",
     "    play_game()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 20\n",
+    "Implement a function that takes as input three variables, and returns the largest of the three. Do this without using the Python max() function!\n",
+    "\n",
+    "The goal of this exercise is to think about some internals that Python normally takes care of for us. All you need is some variables and if statements!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# num1=int(input('Enter the first digit:'))\n",
+    "# num2=int(input('Enter the second digit:'))\n",
+    "# num3=int(input('Enter the third digit:'))\n",
+    "def num():\n",
+    "    for i in range(3):\n",
+    "        lst=[]\n",
+    "        num=int(input('give the number:'))\n",
+    "        lst.append(num)\n",
+    "    return lst\n",
+    "\n",
+    "max_num=max(num())\n",
+    "print(max_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 21\n",
+    "In this exercise, the task is to write a function that picks a random word from a list of words from the SOWPODS dictionary. Download this file and save it in the same directory as your Python code. This file is Peter Norvig’s compilation of the dictionary of words used in professional Scrabble tournaments. Each line in the file contains a single word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can download the file using url in three ways\n",
+    "import requests\n",
+    "url='https://norvig.com/ngrams/sowpods.txt'\n",
+    "\n",
+    "response=requests.get(url)\n",
+    "file_path='words_using_requests.txt'\n",
+    "\n",
+    "if response.status_code==200:\n",
+    "    with open(file_path,'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"File downloaded successfully\")\n",
+    "else:\n",
+    "    print('Failed to download the file')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('words_using_urllib.txt', <http.client.HTTPMessage at 0x2120bf85ee0>)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using urlib3 module\n",
+    "import urllib.request\n",
+    "url='https://norvig.com/ngrams/sowpods.txt'\n",
+    "\n",
+    "file_path='words_using_urllib.txt'\n",
+    "urllib.request.urlretrieve(url,file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wget in c:\\users\\91965\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install wget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "download\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using wget\n",
+    "import  wget\n",
+    "url='https://norvig.com/ngrams/sowpods.txt'\n",
+    "\n",
+    "file_path='words_using_wget.txt'\n",
+    "wget.download(url,file_path)\n",
+    "print('download')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUNTERFEITERS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "file=open('words_using_requests.txt','r')\n",
+    "words=file.read()\n",
+    "\n",
+    "lst=words.split('\\n')\n",
+    "\n",
+    "random_word=random.choice(lst)\n",
+    "print(random_word)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 22\n",
+    "Let’s continue building Hangman. In the game of Hangman, a clue word is given by the program that the player has to guess, letter by letter. The player guesses one letter at a time until the entire word has been guessed. (In the actual game, the player can only guess 6 letters incorrectly before losing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
   }
  ],
  "metadata": {
