--- a/python_problems.ipynb
+++ b/python_problems.ipynb
@@ -11,13 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "def merge(nums1,nums2,m,n):\n",
     "    nums1 = nums1[:m]\n",
-    "    print(nums1)\n",
+    "    #print(nums1)\n",
     "    nums2 = nums2[:n]\n",
     "    newarr = nums1+nums2\n",
     "    newarr.sort()\n",
