--- a/leet_code_problems.ipynb
+++ b/leet_code_problems.ipynb
@@ -265,6 +265,58 @@
     "k=2\n",
     "print(rotate(nums,k))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. You are given an array prices where prices[i] is the price of a given stock on the ith day.\n",
+    "\n",
+    "You want to maximize your profit by choosing a single day to buy one stock and choosing a different day in the future to sell that stock.\n",
+    "\n",
+    "Return the maximum profit you can achieve from this transaction. If you cannot achieve any profit, return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "0\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buy_sell_stocks(prices):\n",
+    "    min_price=float('inf')\n",
+    "    max_profit=0\n",
+    "    for price in prices:\n",
+    "        if price<min_price:\n",
+    "           min_price=price\n",
+    "        total_profit=price-min_price\n",
+    "        if total_profit>max_profit:\n",
+    "            max_profit=total_profit\n",
+    "    return max_profit\n",
+    "#example 1\n",
+    "prices=[7, 1, 5, 3, 6, 4]\n",
+    "print(buy_sell_stocks(prices))\n",
+    "\n",
+    "#example 2\n",
+    "prices=[7,6,4,3,1]\n",
+    "print(buy_sell_stocks(prices))\n",
+    "\n",
+    "prices=[7,10]\n",
+    "print(buy_sell_stocks(prices))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
