--- a/mysql.ipynb
+++ b/mysql.ipynb
@@ -27,7 +27,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\"\n",
+    "    password=\"Password\"\n",
     ")\n",
     "\n",
     "print(mydb)\n",
@@ -97,7 +97,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\",\n",
+    "    password=\"Password\",\n",
     "    database=\"mydatabase\"\n",
     ")\n",
     "\n",
@@ -315,7 +315,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\",\n",
+    "    password=\"Password\",\n",
     "    database=\"mydatabase\"\n",
     ")\n",
     "mycursor = mydb.cursor()\n",
@@ -376,7 +376,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\",\n",
+    "    password=\"Password\",\n",
     "    database=\"mydatabase\"\n",
     ")\n",
     "\n",
@@ -410,7 +410,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\",\n",
+    "    password=\"Password\",\n",
     "    database=\"mydatabase\"\n",
     ")\n",
     "mycursor = mydb.cursor()\n",
@@ -657,7 +657,7 @@
     "mydb=mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Suryateja@123\",\n",
+    "    password=\"Password\",\n",
     "    database=\"mydatabase\"\n",
     ")\n"
    ]
