--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from pymongo.mongo_client import MongoClient\n",
     "from pymongo.server_api import ServerApi\n",
-    "uri = \"mongodb+srv://user:13730@cluster0.fahmd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "uri = \"mongodb+srv://user:password@cluster0.fahmd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
     "# Create a new client and connect to the server\n",
     "client = MongoClient(uri, server_api=ServerApi('1'))\n",
     "# Send a ping to confirm a successful connection\n",
